Fixed Z-Index for footer

--- a/DUS/mainApp/static/assets/css/homePage.css
+++ b/DUS/mainApp/static/assets/css/homePage.css
@@ -81,10 +81,14 @@ body {
 
 
 
+.hover_effect {
+    z-index: 1;   
+}
 
 .hover_effect ul {
     list-style-type: none;
     padding: 0;
+
 }
 
 .hover_effect ul li {
