--- a/DUS/mainApp/static/assets/css/mainStyles.css
+++ b/DUS/mainApp/static/assets/css/mainStyles.css
@@ -109,7 +109,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
+  z-index: 999;
   padding: 30px 0;
   width: 100%;
   background-color: #1A1A1A;
